--- a/.github/workflows/request-initial-comments.yml
+++ b/.github/workflows/request-initial-comments.yml
@@ -59,6 +59,34 @@ jobs:
             _The instance name is derived from the GitHub issue number using the template `${{ steps.define.outputs.instance_prefix }}instance-NNN`. The instance may also be located in the exosphere interface using this name._
           edit-mode: replace
 
+      - name: Define volume name
+        id: define_volume_name
+        uses: ./.github/actions/define-volume-name
+        with:
+          issue_number: ${{ steps.collect_inputs.outputs.issue_number }}
+          suffix: ${{ vars.VOLUME_NAME_SUFFIX }}
+
+      - name: Find Volume Name Comment
+        uses: peter-evans/find-comment@v3
+        id: fc_volume_name
+        with:
+          issue-number: ${{ steps.collect_inputs.outputs.issue_number }}
+          comment-author: "github-actions[bot]"
+          body-includes: "### Volume Name"
+
+      - name: comment (volume name)
+        uses: peter-evans/create-or-update-comment@v4.0.0
+        with:
+          comment-id: ${{ steps.fc_volume_name.outputs.comment-id }}
+          issue-number: ${{ steps.collect_inputs.outputs.issue_number }}
+          body: |
+            ### Volume Name
+
+            `${{ steps.define_volume_name.outputs.volume_name }}`
+
+            _The volume name is derived from the GitHub issue number using the template `My-Data-NNN${{ steps.define_volume_name.outputs.volume_suffix }}`. The volume may also be located in the exosphere interface using this name._
+          edit-mode: replace
+
       - name: Find Issue Commands Comment
         uses: peter-evans/find-comment@v3
         id: fc_commands
