--- a/.github/workflows/request-initial-comments.yml
+++ b/.github/workflows/request-initial-comments.yml
@@ -35,6 +35,7 @@ jobs:
         id: define
         uses: ./.github/actions/define-instance-name
         with:
+          prefix: ${{ vars.INSTANCE_NAME_PREFIX }}
           issue_number: ${{ steps.collect_inputs.outputs.issue_number }}
 
       - name: Find Instance Name Comment
