fix: Always return the expected instance when filtering list
Given a string like "instance-3", using `contains()` may return both
"morpho-cloud-portal_instance-32" and "instance-3", this commit ensures
the lookup is performing an exact match.

--- a/.github/actions/check-instance-exists/action.yml
+++ b/.github/actions/check-instance-exists/action.yml
@@ -22,7 +22,7 @@ runs:
         instance=$(openstack server list -f json | \
           jq \
             --arg instance_name "$INSTANCE_NAME" \
-            -c '.[] | select(.Name | contains($instance_name))' | \
+            -c '.[] | select(.Name == $instance_name)' | \
           jq -r '.Name' | tail -1)
 
         [[ $instance == "$INSTANCE_NAME" ]] && exists="true" || exists="false"
