--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -153,7 +153,7 @@ jobs:
           volume_name: ${{ steps.define_volume_name.outputs.volume_name }}
 
       - name: comment (volume already exists)
-        if: ${{ fromJSON(steps.check_instance.outputs.exists) }}
+        if: ${{ fromJSON(steps.check_volume.outputs.exists) }}
         uses: peter-evans/create-or-update-comment@v4.0.0
         with:
           issue-number: ${{ github.event.issue.number }}
@@ -165,7 +165,7 @@ jobs:
             See details at https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
       - name: Create Volume
-        if: ${{ ! fromJSON(steps.check_instance.outputs.exists) }}
+        if: ${{ ! fromJSON(steps.check_volume.outputs.exists) }}
         id: create_volume
         run: |
           export OS_CLOUD=BIO180006_IU # Select openstack auth settings defined in ".config/openstack/clouds.yaml"
