--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -23,6 +23,17 @@ jobs:
 
       - uses: actions/checkout@v4
 
+      - name: Add "instance:approved" label
+        uses: actions/github-script@v7
+        with:
+          script: |
+            github.rest.issues.addLabels({
+              issue_number: context.payload.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              labels: ["instance:approved"]
+            })
+
       - name: comment (progress)
         id: couc_progress
         uses: ./.github/actions/comment-progress
