--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -491,11 +491,32 @@ jobs:
           retrieve_connection_url: ✅
           send_email: ⏳
 
+      - name: Check if email is encoded
+        id: check_email_encryption
+        run: |
+          if [[ "$EMAIL" != *"@"* ]]; then
+            encoded="true"
+          else
+            encoded="false"
+          fi
+          echo "encoded=$encoded" >> $GITHUB_OUTPUT
+        env:
+          EMAIL: ${{ steps.extract.outputs.email }}
+
+      - name: Decode email
+        id: decode_email
+        uses: ./.github/actions/encode-decode-string
+        with:
+          input_string: ${{ steps.extract.outputs.email }}
+          encryption_key: ${{ secrets.STRING_ENCRYPTION_KEY }}
+          operation: "decode"
+          skip: ${{ steps.check_email_encryption.outputs.encoded == 'false' }}
+
       - name: Send mail (completed)
         if: ${{ steps.instance_poll.outputs.status == 'complete' }}
         uses: ./.github/actions/send-email
         with:
-          to: ${{ steps.extract.outputs.email }}
+          to: ${{ steps.decode_email.outputs.output_string }}
           mail_server_username: ${{secrets.MAIL_USERNAME}}
           mail_server_password: ${{secrets.MAIL_PASSWORD}}
           instance_name: ${{ steps.define.outputs.instance_name }}
