fix(send-email): Use correct email to request support
Co-authored-by: muratmaga <muratmaga@outlook.com>

--- a/.github/actions/send-email/action.yml
+++ b/.github/actions/send-email/action.yml
@@ -55,7 +55,7 @@ runs:
           - To shelve an instance and preserve your allocation, use the `/shelve` command.
           - To obtain the latest set of access credentials, use the `/email` command.
 
-          If you have questions, please contact [morphocloud-support@gmail.com](mailto:morphocloud-support@gmail.com).
+          If you have questions, please contact [morphocloud@outlook.com](mailto:morphocloud@outlook.com).
 
           **Connection Methods:**
 
