--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -23,7 +23,7 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - name: Add "instance:approved" label
+      - name: Add "request:approved" label
         uses: actions/github-script@v7
         with:
           script: |
@@ -31,7 +31,7 @@ jobs:
               issue_number: context.payload.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              labels: ["instance:approved"]
+              labels: ["request:approved"]
             })
 
       - name: comment (progress)
