fix(control-instance): Do not report two errors with polling fails

--- a/.github/workflows/control-instance.yml
+++ b/.github/workflows/control-instance.yml
@@ -115,6 +115,7 @@ jobs:
             `${{ steps.command.outputs.command_name }}` command failed because **${{ steps.define.outputs.instance_name }}** instance does not exist.
 
       - name: Execute command
+        id: execute_command
         if:
           ${{ steps.command.outputs.continue == 'true' &&
           steps.check_instance.outputs.exists == 'true' }}
@@ -127,6 +128,17 @@ jobs:
         env:
           INSTANCE_NAME: ${{ steps.define.outputs.instance_name }}
           COMMAND_NAME: ${{ steps.command.outputs.command_name }}
+
+      - name: command results comment (failure)
+        if: ${{ steps.execute_command.outcome == 'failure' && failure() }}
+        uses: peter-evans/create-or-update-comment@v4.0.0
+        with:
+          issue-number: ${{ github.event.issue.number }}
+          body: |
+            ### Command Results ❌
+
+            `${{ steps.command.outputs.command_name }}` command failed to applied to **${{ steps.define.outputs.instance_name }}** instance.
+            See details at https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
       - name: Poll instance status
         id: instance_poll
@@ -191,16 +203,3 @@ jobs:
             ### Command Results ✅
 
             `${{ steps.command.outputs.command_name }}` command successfully applied to **${{ steps.define.outputs.instance_name }}** instance.
-
-      - name: command results comment (failure)
-        if:
-          ${{ steps.command.outputs.continue == 'true' &&
-          steps.check_instance.outputs.exists == 'true' && failure() }}
-        uses: peter-evans/create-or-update-comment@v4.0.0
-        with:
-          issue-number: ${{ github.event.issue.number }}
-          body: |
-            ### Command Results ❌
-
-            `${{ steps.command.outputs.command_name }}` command failed to applied to **${{ steps.define.outputs.instance_name }}** instance.
-            See details at https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
