--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,3 +31,9 @@ repos:
       - id: check-github-actions
       - id: check-github-workflows
       - id: check-readthedocs
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: "v0.5.7"
+    hooks:
+      - id: ruff
+        args: [--fix, --show-fixes]
