feat(collect-instance-uptime): Schedule to run every 5 minutes

--- a/.github/workflows/collect-instance-uptime.yml
+++ b/.github/workflows/collect-instance-uptime.yml
@@ -1,8 +1,8 @@
 name: Collect Instance Uptime
 on:
-  #  schedule:
-  #    # Run every 5 mins
-  #    - cron: "* * * * *"
+  schedule:
+    # Run every 5 mins
+    - cron: "* * * * *"
   workflow_dispatch:
 
 jobs:
